--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
+    "formik": "^2.4.6",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sib-api-v3-sdk": "^8.5.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
